--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,23 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.08.2024 14:42:00</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.08.2024 07:02:31</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
-<table class="table"><table class="table">
+<table class="table"><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou s kapáním</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová s klobásou a krutony</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky 26.8.</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s celestýnskými nudlemi a zeleninou</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP </td><td class="menuName">Burčák bílý odrůda Solaris -LEDNICE</td><td class="menuPrice">TOP</td></tr><tr><td class="menuWeight"> TOP</td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřová kotleta bez kosti na omáčce po srbsku, dušená jasmínová rýže</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené hovězí kostky na hříbkách, kynuté houskové knedlíky</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Šenkýrenský talíř ( šunková klobása 96%, uzená kýta, vepřová krkovice) na grilu, variace knedlíků, bílé a červené zelí</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta:150g Steak z kuřecích prsou na grilovaných žampionech s čerstvou paprikou, rokfórový dip</td><td class="menuPrice">187,-</td></tr><tr><td class="menuWeight">170g</td><td class="menuName">Závitek z vepřové pečeně plněný šunkou a sýrem na jemné sýrové omáčce s kukuřicí, hranolky</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zadělávané špecle se smetanou se sušenými rajčaty a plátky česneku, filírovaná vepřová panenka, parmazán</td><td class="menuPrice">172,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Biftek z pravé hovězí svíčkové s fazolovými lusky, anglickou slaninou, pepřová redukce, krokety</td><td class="menuPrice">210,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný majonézovým dresinkem, pražená anglická slanina, kuřecí prsa na grilu, parmazán, vařené vejce</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Flamendr z kuřecích prsou se zeleninou , hranolky</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Španělský ptáček z hovězí roštěné, dušená jasmínová rýže</td><td class="menuPrice">177,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí kostky na česneku, bramborové knedlíky maštěné cibulkou, špenát</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cmunda po Kaplicku (bramborová placka s uzeným masem a bílým zelím)</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová krkovice na černém pivě, mačkané brambory s pórkem</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 180g Špíz prokládaný vepřovou panenkou, anglickou slaninou, paprikou a cibulí podávaný na jemné sýrové omáčce, kukuřičný klas na másle, celero-mrkvové hranolky</td><td class="menuPrice">193,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí prsa na roštu, grilovaná zelenina (cuketa, lilek, paprika,cibule a tomaty)na másle sypané parmazánem, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">179,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený hermelín se šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusilli s kuřecím masem, anglickou slaninou, kukuřicí a pórkem ve smetaně, strouhaný parmazán</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">49,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5L</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12°za 18,-Kč.  </td><td class="menuPrice">14,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,5-0,3l</td><td class="menuName">Citronáda</td><td class="menuPrice">23,-/29,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Houba (0,2L červené víno s 0,3L colou a ledem)</td><td class="menuPrice">72,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </h5><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12° za 18,-Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 11° Albín Ale alk. 4,5% svrchně kvašené - pivovar Muflon</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52</td></tr><tr><td class="menuWeight">0,3l - 0,5l</td><td class="menuName">Citronáda</td><td class="menuPrice">23,-/29,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -29,13 +23,16 @@
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2" style="padding:0px;"><img height="auto" src="https://mattesrestaurace.cz/img/vikend3.jpg?id=4" width="auto"/></div>
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/>
 <script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+  position: relative;
+  top: -100px; 
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
 Volba Sládků<br>
 Kozel tmavý<br>
 Cider Kingswood<br>
 <br>
 Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -45,34 +42,9 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Pátek 23.8.2024 </div>
+<div class="nadpis">Sobota 24.8.2024 </div>
 <ul>
-<span class="popup-gallery"><li class="polevka">
-<div class="polozka">Bramborová 1, 9</div>
-<div class="cena">40 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Kuřecí stripsy, balené v tortille se sýrem,  bylinkový dresing, steakové hranolky, čerstvá zelenina 1, 3, 7</div>
-<div class="cena">185 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Kuřecí řízek, židovský bramborový salát 1, 3, 7</div>
-<div class="cena">175 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>350g Zeleninový salát s kuřecími nudličkami balené v bylinkách, dresing, bageta</div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>250g Dukátové buchtičky se šodó zdobená mátou 1, 3, 7</div>
-<div class="cena">135 Kč</div>
-<div class="clear"></div>
-</li>
-</span> </ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -83,29 +55,9 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 23.8.2024 </div>
+<div class="nadpis">Sobota 24.8.2024 </div>
 <ul>
-<span class="popup-gallery"><li class="polevka">
-<div class="polozka">Čočková</div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>Špagety carbonara</div>
-<div class="cena">140 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>Kuřecí plátek s houbovou omáčkou, štouchaný brambor</div>
-<div class="cena">140 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>Buchtičky se šodo</div>
-<div class="cena">140 Kč</div>
-<div class="clear"></div>
-</li>
-</span> </ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -129,7 +81,7 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <div class="item js-bookmark">
 <a class="link js-bookmark-switcher" href="#day_23063">Čtvrtek 22. 08.</a>
 </div>
-<div class="item js-bookmark active">
+<div class="item js-bookmark">
 <a class="link js-bookmark-switcher" href="#day_23086">Pátek 23. 08.</a>
 </div>
 </div>
@@ -175,7 +127,7 @@ Vytápěna zimní zahrada</p><center>--></div></div>
         169 Kč    </td>
 </tr>
 </table>
-<table class="list js-bookmark-block" id="day_23086" style="display:table;">
+<table class="list js-bookmark-block" id="day_23086">
 <tr>
 <td class="volume"></td>
 <td class="name">
